2001-03-02  Kevin Buettner  <kevinb@redhat.com>

	* config/ia64/xm-aix.h (GDB_GREGSET_T, GDB_FPREGSET_T): Move defines
	from here...
	* config/ia64/nm-aix.h (GDB_GREGSET_T, GDB_FPREGSET_T): ...to here.
	(MONTEREY): Don't define.
	(AIX5): Define.

2001-03-02  Matt Hiller  <hiller@redhat.com>

	* config/mn10300/tm-mn10300.h (E0_REGNUM): Correct to 15.

2001-03-02  Kevin Buettner  <kevinb@redhat.com>

	* sparc-nat.c (sparc-nat.c): Don't include self.

2001-03-01  J.T. Conklin  <jtc@redback.com>

	* defs.h (__CYGWIN__): Moved conditional which defines __CYGWIN__
 	if __CYGWIN32__ is set from here.
	* config/i386/xm-cygwin.h: To here.
	* config/powerpc/xm-cygwin.h: To here.

	* i386-stub.c (handle_exception): Use 'T' response packet.

2001-03-01  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* m32r-tdep.c: Fix cut and paste error in comment.

2001-02-28  Michael Snyder  <msnyder@mvstp600e.cygnus.com>

	* symtab.c (print_msymbol_info): Print addresses by portable method
	longest_local_hex_string_custom.  Allow for 64-bit addresses.

2001-03-01  J.T. Conklin  <jtc@redback.com>

	* gdbtypes.h (builtin_type_f_integer): Removed duplicate declaration.
	(MAX_OF_TYPE): Wrap macro definition in parenthesis.
	(MIN_OF_TYPE): Likewise.
	
	* memattr.h (mem_access_mode): Removed extraneous trailing comma.

2001-03-01  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (os9kread.o): Do not compile with WERROR_CFLAGS.
	* os9kread.c (os9k_process_one_symbol): Add assert to detect
	``loses if sizeof (char *) > sizeof (int)''.

2001-03-01  Andrew Cagney  <ac131313@redhat.com>

	* gdb_assert.h: Document pragmatics behind gdb_assert's case.

2001-03-01  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (gdbtk-cmds.o): Add $(regcache_h) to dependency
	lists.
	(mi-main.o): Ditto.

2001-03-01  Andrew Cagney  <ac131313@redhat.com>

	* Makefile.in (regcache_h): Define. Add $(regcache_h) to
	dependency lists.

2001-02-28  Michael Snyder  <msnyder@mvstp600e.cygnus.com>
