@@ -107,7 +107,7 @@ maintainer works with the native maintainer when resolving API issues.
 	mips		--target=mips-elf,mips64-elf ,-Werror
 			Andrew Cagney		cagney@cygnus.com
 
-	mn10200		(--target=mn10200-elf broken)
+	mn10200		--target=mn10200-elf ,-Werror
 			Maintenance only
 
 	mn10300		--target=mn10300-elf ,-Werror
